Remove .mvn stuff.

--- a/spring-petclinic-clone-kotlin/.gitignore
+++ b/spring-petclinic-clone-kotlin/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 target/
 
-!.mvn/
+.mvn/
 
 .apt_generated
 .classpath
@@ -25,3 +25,4 @@ target/
 build/
 
 .vscode/
+src/main/kotlin/com/ivk23/petclinic/kotlin/config/
