--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,31 @@
 version: 2.1
 
-orbs:
-  maven: circleci/maven@0.0.12
+jobs:
+  build:
+    
+    working_directory: ~/learning-spring/spring-petclinic-clone-kotlin
 
-workflows:
-  maven_test:
-    jobs:
-      - maven/test # checkout, build, test, and upload test results
+    docker:
+      - image: circleci/openjdk:11-stretch
+
+    steps:
+
+      - checkout
+
+      - restore_cache:
+          key: learning-spring/spring-petclinic-clone-kotlin-{{ checksum "pom.xml" }}
+      
+      - run: mvn dependency:go-offline
+      
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: learning-spring/spring-petclinic-clone-kotlin-{{ checksum "pom.xml" }}
+      
+      - run: mvn package
+      
+      - store_test_results:
+          path: target/surefire-reports
+      
+      - store_artifacts:
+          path: target/spring-petclinic-clone-kotlin-0.0.1-SNAPSHOT.jar
