--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     
-    working_directory: ~/learning-spring/spring-petclinic-clone-kotlin
+    working_directory: ~/learning-spring
 
     docker:
       - image: circleci/openjdk:11-stretch
@@ -13,16 +13,16 @@ jobs:
       - checkout
 
       - restore_cache:
-          key: learning-spring/spring-petclinic-clone-kotlin-{{ checksum "pom.xml" }}
+          key: spring-petclinic-clone-kotlin-{{ checksum "/spring-petclinic-clone-kotlin/pom.xml" }}
       
       - run: mvn dependency:go-offline
       
       - save_cache:
           paths:
             - ~/.m2
-          key: learning-spring/spring-petclinic-clone-kotlin-{{ checksum "pom.xml" }}
+          key: spring-petclinic-clone-kotlin-{{ checksum "spring-petclinic-clone-kotlin/pom.xml" }}
       
-      - run: mvn package
+      - run: mvn -f /spring-petclinic-clone-kotlin/pom.xml package
       
       - store_test_results:
           path: target/surefire-reports
