--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,10 @@ jobs:
             - ~/.m2
           key: spring-petclinic-clone-kotlin-{{ checksum "spring-petclinic-clone-kotlin/pom.xml" }}
       
-      - run: mvn -f spring-petclinic-clone-kotlin/pom.xml package
+      - run: mvn -f spring-petclinic-clone-kotlin/pom.xml clean package
       
       - store_test_results:
           path: /spring-petclinic-clone-kotlin/target/surefire-reports
       
       - store_artifacts:
-          path: s/pring-petclinic-clone-kotlin/target/spring-petclinic-clone-kotlin-0.0.1-SNAPSHOT.jar
+          path: /pring-petclinic-clone-kotlin/target/spring-petclinic-clone-kotlin-0.0.1-SNAPSHOT.jar
