--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,6 @@ jobs:
       
       - store_artifacts:
           path: ~/learning-spring/spring-petclinic-clone-kotlin/target/spring-petclinic-clone-kotlin-0.0.1-SNAPSHOT.jar
+          
+      - store_artifacts:
+          path: ~/learning-spring/spring-petclinic-clone-kotlin/target/my-reports
