--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
           
       - store_artifacts:
           path: ~/learning-spring/spring-petclinic-clone-kotlin/target/my-reports
+          destination:  ~/learning-spring/spring-petclinic-clone-kotlin/code_coverage_report
                 
       - store_artifacts:
           path: ~/learning-spring/spring-petclinic-clone-kotlin/target/jacoco.exec
