--- a/spring-petclinic-clone-kotlin/src/main/resources/application-mysql.yml
+++ b/spring-petclinic-clone-kotlin/src/main/resources/application-mysql.yml
@@ -5,6 +5,6 @@ spring:
     password: super_password
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
