--- a/spring-core-only/pom.xml
+++ b/spring-core-only/pom.xml
@@ -59,6 +59,11 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.1</version>
+        </dependency>
 
     </dependencies>
     <properties>
