--- a/spring-petclinic-clone-kotlin/src/main/resources/application.properties
+++ b/spring-petclinic-clone-kotlin/src/main/resources/application.properties
@@ -2,3 +2,8 @@ logging.level.web=DEBUG
 logging.level.com.ivk23.petclinic=DEBUG
 
 spring.profiles.active=dev,metrics
+
+# logging.level.org.springframework=DEBUG
+spring.http.log-request-details=true
+
+# https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#boot-features-spring-mvc-static-content
